[package]
name = "drip_raffle"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "drip_raffle"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
solana-program = "=1.18.2"
anchor-spl = "0.29.0"
mpl-bubblegum = { version = "1.2.0" }
spl-account-compression = { version = "0.3.0", features = [
    "no-entrypoint",
    "cpi",
] }
arrayref = "0.3.7"

